[build-system]
requires = [
    "setuptools >= 61.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "sdx-lc"
description = "AtlanticWave-SDX project's local controller"
version = "2.0.0"
authors = [
    { name = "Yufeng Xin", email = "yxin@renci.org" },
    { name = "Cong Wang", email = "cwang@renci.org" },
    { name = "Sajith Sasidharan", email = "sajith@renci.org" },
]
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "python_dateutil == 2.8.2",
    "setuptools >= 21.0.0",
    "pika >= 1.2.0",
    "dataset",
    "connexion[swagger-ui] == 2.14.2",
    "pymongo > 3.0",
]

[project.optional-dependencies]
test = [
    "flask_testing==0.8.1",
    "coverage>=4.0.3",
    "pluggy>=0.3.1",
    "py>=1.4.31",
    "randomize>=0.13",
    "tox==3.20.1",
    "pytest>=7.1.2",
    "pytest-cov>=3.0.0",
]

[tool.black]
include = '\.py?$'

[tool.isort]
profile = "black"
src_paths = ["setup.py", "sdx_lc", "mq-test"]
